# Dating_app

./: .gitignore  .pre-commit-config.yaml  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: lint_on_push.yaml
nginx/: nginx.conf
src/: .env.template  Dockerfile  Dockerfile.dev  db.env.template  pyproject.toml  requirements.dev.txt  requirements.test.txt  requirements.txt
src/api/: admin.py  factories.py  forms.py  managers.py  models.py  serializers.py  services.py  utils.py  views.py
src/api/management/commands/: create_test_users.py
src/api/migrations/: 0001_initial.py  0002_like.py  0002_match.py
src/api/test/: test_user_model.py
src/config/: settings.py  urls.py
src/profiles/: factories.py  models.py  services.py
src/profiles/migrations/: 0001_initial.py
src/profiles/test/: test_models.py
src/users/: admin.py  apps.py  factories.py  managers.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
src/users/management/commands/: create_test_users.py
src/users/migrations/: 0001_initial.py
src/users/test/: test_models.py  test_views.py
