[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.0.3",
    "djangorestframework==3.15.1",
    "gunicorn==23.0.0",
    "pillow==10.2",
    "psycopg==3.2.3",
    "psycopg-binary==3.2.3",
    "psycopg-pool==3.2.3",
]

[dependency-groups]
dev = [
    "black==24.10.0",
    "factory-boy==3.3.1",
    "pre-commit==4.0.1",
    "ruff==0.7.2",
]

[tool.uv]
# to add a group to the default installation, extend "default-groups"
# default-groups = []